k8s/30-hpa-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fiapx
  namespace: fiapx
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "512m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
spec:
  ingressClassName: nginx
  rules:
    - host: fiapx.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fiapx-api
                port: { number: 80 }
